Add Spanish version

--- a/es/about.html
+++ b/es/about.html
@@ -32,19 +32,30 @@
 					<ul class="nav navbar-nav">
 					  <li><a href="about.html">About</a></li>
 						<li><a href="menu.html">Menu</a></li>
-						<li><a href="catering.html">Catering</a></li>
 					</ul>
 				  <ul class="nav navbar-nav navbar-right">
-						<li><a href="login.html">Login</a></li>
+						<li><a href="../about.html">English</a></li>
 						<li><a href="signup.html">Sign-Up</a></li>
 					</ul>
 				</div>
 			</nav>
 		</header>
-		<main style="margin-bottom: 15vh;">
-	 	</main>
-	        <br/>
-		<aside>
+    <main style="margin-bottom: 15vh;">
+		  <section class="page-section">
+			<br/>
+			<div class="title-words">
+			  <h1>Our Story</h1>
+				<br/>
+			</div>
+			<div class="info-div">
+			  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed tellus sed diam rutrum laoreet nec eu libero. Vestibulum vitae ante tincidunt, faucibus est in, fermentum metus. Aenean in accumsan mauris, at iaculis purus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean eleifend dapibus lorem non sagittis.</p>
+				<blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed tellus sed diam rutrum laoreet nec eu libero. Vestibulum vitae ante tincidunt, faucibus est in, fermentum metus. -Someone</blockquote>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed tellus sed diam rutrum laoreet nec eu libero. Vestibulum vitae ante tincidunt, faucibus est in, fermentum metus. Aenean in accumsan mauris, at iaculis purus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean eleifend dapibus lorem non sagittis. Sed a sem condimentum, bibendum nulla et, porta odio. Nam ac dolor aliquam nisl cursus congue. Nunc sed porttitor odio, quis hendrerit magna. Proin dapibus purus id euismod auctor.</p>
+			</div>
+			</section>
+		</main>
+	  	<br/>
+	  	<aside>
 			<p style="text-align: center"><em>1(800) 555-1234</em></p>
 			<address style="text-align: center">8452 Ledner Mount, Keithside, BL</address>
 	        </aside>
@@ -57,8 +68,8 @@
 						<img class="img-responsive" src="images/SizzleLogoV9.png" alt="Sizzle Logo" width="160px" style="padding: 10px"/>
 					</a>
 				</div>
-				<div class="col-sm-6" style="text-align: center">
-					<p style="margin-top: 50px">
+				<div class="col-sm-6" style="text-align: center;">
+					<p style="margin-top: 50px;">
 						<a href="about.html" class="link"> About</a> | 
 						<a href="menu.html" class="link"> Menu</a> | 
 						<a href="catering.html" class="link"> Catering</a> | 
@@ -68,7 +79,7 @@
 					</p>
 				</div>
 				<div class="col-sm-3">
-					<p style="margin-top: 50px">For Educational Purposes Only</p>
+					<p style="margin-top: 50px;">For Educational Purposes Only</p>
 				</div>
 			</div>
 		</footer>
