--- a/es/sitemap.html
+++ b/es/sitemap.html
@@ -34,60 +34,15 @@
 						<li><a href="menu.html">Menu</a></li>
 					</ul>
 				  <ul class="nav navbar-nav navbar-right">
-						<li><a href="es/index.html">Espa&#241;ol</a></li>
+						<li><a href="../sitemap.html">English</a></li>
 						<li><a href="signup.html">Sign-Up</a></li>
 					</ul>
 				</div>
 			</nav>
 		</header>
-    <main id="homepage-main">
-			<br/><br/><br/>
-			<figure class="container" id="figure">
-				 <img src="images/homepage-main-picture2.jpeg" alt="Breakfast" class="img-responsive img-rounded"/>
-			</figure>
-			<section id="homepage-section">
-				<br/>
-				<div>
-					<span class="title-words">
-						<h1>Order Online!</h1>
-						<br/>
-					</span>
-				<div id="order-instructions" class="row">
-				  <div class="col-sm-4 instruction-panel">
-						<h4 style={{textDecoration: "underline"}}>Step 1</h4>
-						<p>Pick out your favorite foods <a href="#" target="_blank" class="link">here</a></p>
-					</div>
-					<div class="col-sm-4 instruction-panel">
-						<h4 style={{textDecoration: "underline"}}>Step 2</h4>
-						<p>Wait as we deliver your meal right to you</p>
-					</div>
-					<div class="col-sm-4 instruction-panel">
-						<h4 style="text-decoration: underline;">Step 3</h4>
-						<p>Fill out our <a href="survey.html" target="_blank" class="link">Optional Survey</a></p>
-					</div>
-				</div>
-				</div>
-				<br/>
-				<hr style="width: 70%; height: 5px; background-color: #E0E0E0;"/>
-				<br/>
-				<div style="text-align: center;">
-					<h1 style="font-weight: 600;">Join the Sizzle Family!</h1>
-					<a href="careers.html" id="career-button" class="link link-button btn btn-default btn-lg">Careers</a>
-					<br/><br/>
-				</div>
-				<br/>
-				<hr style="width: 70%; height: 5px; background-color: #E0E0E0;"/>
-				<br/>
-				<div style="text-align: center;">
-					<h1 style="font-weight: 600;">Check Out Our Menu!</h1>
-					<a href="menu.html" id="menu-button" class="link link-button btn btn-default btn-lg">Menu</a>
-					<br/><br/>
-				</div>
-				<br/>
-				<hr style="width: 70%; height: 5px; background-color: #E0E0E0;"/>
-			</section>
-		</main>
-		<br/>
+		<main style="margin-bottom: 15vh;">
+	  	</main>
+	  	<br/>
 	  	<aside>
 			<p style="text-align: center"><em>1(800) 555-1234</em></p>
 			<address style="text-align: center">8452 Ledner Mount, Keithside, BL</address>
