--- a/about.html
+++ b/about.html
@@ -32,10 +32,9 @@
 					<ul class="nav navbar-nav">
 					  <li><a href="about.html">About</a></li>
 						<li><a href="menu.html">Menu</a></li>
-						<li><a href="catering.html">Catering</a></li>
 					</ul>
 				  <ul class="nav navbar-nav navbar-right">
-						<li><a href="login.html">Login</a></li>
+						<li><a href="es/about.html">Espa&#241;ol</a></li>
 						<li><a href="signup.html">Sign-Up</a></li>
 					</ul>
 				</div>
