--- a/es/index.html
+++ b/es/index.html
@@ -34,7 +34,7 @@
 						<li><a href="menu.html">Menu</a></li>
 					</ul>
 				  <ul class="nav navbar-nav navbar-right">
-						<li><a href="es/index.html">Espa&#241;ol</a></li>
+						<li><a href="../index.html">English</a></li>
 						<li><a href="signup.html">Sign-Up</a></li>
 					</ul>
 				</div>
