--- a/es/menu.html
+++ b/es/menu.html
@@ -221,7 +221,7 @@
 						<li><a href="menu.html">Menu</a></li>
 					</ul>
 				  <ul class="nav navbar-nav navbar-right">
-						<li><a href="es/menu.html">Espa&#241;ol</a></li>
+						<li><a href="../menu.html">English</a></li>
 						<li><a href="signup.html">Sign-Up</a></li>
 					</ul>
 				</div>
