Finish sitemap.html

--- a/sitemap.html
+++ b/sitemap.html
@@ -46,15 +46,23 @@
 			    <h1>Sitemap</h1>
 				  <br/>
 			  </div>
-				<div class="info-div">
+				<div>
 					<div class="row">
-						<div class="col-sm-3 col-sm-offset-2">
-						  <h3><a href="index.html" class="link">Home</a></h3>
+						<div class="col-sm-3 col-sm-offset-4">
+						  <h3>Main</h3>
 							<ul>
-							  <li><h4><a href="about.html" class="link">About</a></h4></li>
+							  <li style="font-size: 1.2em;"><a href="index.html" class="link">Home</a></li>
+							  <li style="font-size: 1.2em;"><a href="about.html" class="link">About</a></li>
+								<li style="font-size: 1.2em;"><a href="menu.html" class="link">Menu</a></li>
+								<li style="font-size: 1.2em;"><a href="signup.html" class="link">Sign-Up</a></li>
+								<li style="font-size: 1.2em;"><a href="careers.html" class="link">Careers</a></li>
 							</ul>
 						</div>
 						<div class="col-sm-3">
+						  <h3>Other</h3>
+							<ul>
+							  <li style="font-size: 1.2em;"><a href="survey.html" class="link">Survey</a></li>
+							</ul>
 						</div>
 					</div>
 				</div>
@@ -66,7 +74,7 @@
 			<address style="text-align: center">8452 Ledner Mount, Keithside, BL</address>
 	        </aside>
 	  	<br/>
-		<footer id="footer" class="container-fluid">
+		<footer id="footer" class="container-fluid navbar-fixed-bottom">
 			<br/>
 			<div class="row">
 				<div class="col-sm-3">
