Fix bug in index.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<div id="order-instructions" class="row">
 				  <div class="col-sm-4 instruction-panel">
 						<h4 style="text-decoration: underline;">Step 1</h4>
-						<p>Pick out your favorite foods <a href="#" target="_blank" class="link">here</a></p>
+						<p>Pick out your favorite foods <a href="menu.html" target="_blank" class="link">here</a></p>
 					</div>
 					<div class="col-sm-4 instruction-panel">
 						<h4 style="text-decoration: underline;">Step 2</h4>
