Minify JQuery code

--- a/menu.html
+++ b/menu.html
@@ -42,183 +42,6 @@
 			return total.toFixed(2);
 		}
 	</script>
-	<!--JQuery Stuff-->
-	<script>
-		$(document).ready(function(){
-		  
-		  $("#place-order").click(function() {
-			  let order = $("#order-table").children(),
-				    modal = $("#modal-content");
-				modal.empty();
-				if(order.length !== 0) {
-				  modal.append('<h3>Your Order Has Been Placed!</h3><br/><p>Please Consider Filling Out Our <a href="survey.html" class="link" target="_blank">Survey Form</a></p>');
-				} else {
-				  modal.append('<h3>Please Select Something Before Ordering</h3>');
-				}
-			});
-			//Order Button
-		  $("#order").click(
-			  function() {
-				  $("#order-tab").toggle();
-					$("#menu-content").toggleClass("col-sm-8");
-					$("#order-tab").toggleClass("col-sm-4");
-					var text = $("#order-button").text();
-					$("#order-button").text(
-					  text == "Order" ? "Remove Order" : "Order"
-					);
-					$("#order-table").empty();
-					$("#total").text("$0.00");
-				}
-			);
-			//Waffle Picture 
-			$("#waffle-pic").click(
-			  function() {
-			    $("#waffles-menu").toggle();
-			  }
-			);
-			//Pancakes Picture
-			$("#pancakes-pic").click(
-			  function() {
-				  $("#pancakes-menu").toggle();
-				}
-			);
-			//French Toast Picture
-			$("#french-toast-pic").click(
-			  function() {
-				  $("#french-toast-menu").toggle();
-				}
-			);
-			//Sides Picture
-			$("#sides-pic").click(
-			  function() {
-				  $("#sides-menu").toggle();
-				}
-			);
-			//Drinks Picture
-			$("#drinks-pic").click(
-			  function() {
-				  $("#drinks-menu").toggle();
-				}
-			);
-			//Start Waffles
-			//Regular Waffles 
-			$("#reg-waffles").click(function(){
-			  let item = "<td>Regular Waffles</td>";
-				let value = "<td>$5.99</td>";
-				$("#order-table").append("<tr>" + item + value + "</tr");
-				/*let total = 0;
-				$("order-table").forEach((element) => {
-				  if(typeof element == "number") {
-					  total += element;
-					}
-				});
-				$("#total").text(total);*/
-			});
-			//Blueberry Waffles 
-			$("#blue-waffles").click(function(){
-			  let item = "<td>Blueberry Waffles</td>";
-				let value = "<td>$6.99</td>";
-				$("#order-table").append("<tr>" + item + value + "</tr");
-			});
-			//Chocolate Waffles
-			$("#choc-waffles").click(function(){
-			  let item = "<td>Chocolate Waffles</td>";
-				let value = "<td>$6.99</td>";
-				$("#order-table").append("<tr>" + item + value + "</tr");
-			});
-			//End Waffles
-			//Start Pancakes
-			//Regular Pancakes
-			$("#reg-pancakes").click(function(){
-			  let item = "<td>Regular Pancakes</td>";
-				let value = "<td>$4.99</td>";
-				$("#order-table").append("<tr>" + item + value + "</tr");
-			});
-			//Blueberry Pancakes
-			$("#blue-pancakes").click(function(){
-			  let item = "<td>Blueberry Pancakes</td>";
-				let value = "<td>$5.99</td>";
-				$("#order-table").append("<tr>" + item + value + "</tr");
-			});
-			//Chocolate Pancakes
-			$("#choc-pancakes").click(function(){
-			  let item = "<td>Chocolate Pancakes</td>";
-				let value = "<td>$5.99</td>";
-				$("#order-table").append("<tr>" + item + value + "</tr");
-			});
-			//End Pancakes
-			//Start French Toast
-			//Original French Toast
-			$("#original-french-toast").click(function(){
-			  let item = "<td>Original French Toast</td>";
-				let value = "<td>$6.99</td>";
-				$("#order-table").append("<tr>" + item + value + "</tr");
-			});
-			//Fruit-Topped French Toast
-			$("#fruit-french-toast").click(function(){
-			  let item = "<td>Fruit-Topped French Toast</td>";
-				let value = "<td>$6.99</td>";
-				$("#order-table").append("<tr>" + item + value + "</tr");
-			});
-			//End French Toast
-			//Start Sides
-			//Bacon
-			$("#bacon").click(function(){
-			  let item = "<td>Hickory-Smoked Bacon</td>";
-				let value = "<td>$1.99</td>";
-				$("#order-table").append("<tr>" + item + value + "</tr");
-			});
-			//Eggs
-			$("#eggs").click(function(){
-			  let item = "<td>Eggs</td>";
-				let value = "<td>$1.99</td>";
-				$("#order-table").append("<tr>" + item + value + "</tr");
-			});
-			//Hash Browns
-			$("#hash-browns").click(function(){
-			  let item = "<td>Hash Browns</td>";
-				let value = "<td>$1.99</td>";
-				$("#order-table").append("<tr>" + item + value + "</tr");
-			});
-			//Fruit Bowl
-			$("#fruit").click(function(){
-			  let item = "<td>Fruit Bowl</td>";
-				let value = "<td>$1.99</td>";
-				$("#order-table").append("<tr>" + item + value + "</tr");
-			});
-			//End Sides
-			//Start Drinks
-			//Coffee
-			$("#coffee").click(function(){
-			  let item = "<td>Coffee</td>";
-				let value = "<td>$1.99</td>";
-				$("#order-table").append("<tr>" + item + value + "</tr");
-			});
-			//Orange Juice
-			$("#orange-juice").click(function(){
-			  let item = "<td>Orange Juice</td>";
-				let value = "<td>$1.99</td>";
-				$("#order-table").append("<tr>" + item + value + "</tr");
-			});
-			//Water
-			$("#water").click(function(){
-			  let item = "<td>Water</td>";
-				let value = "<td>$1.99</td>";
-				$("#order-table").append("<tr>" + item + value + "</tr");
-			});
-			//Soft Drink
-			$("#soft-drink").click(function(){
-			  let item = "<td>Soft Drink</td>";
-				let value = "<td>$1.99</td>";
-				$("#order-table").append("<tr>" + item + value + "</tr");
-			});
-			//End Drinks
-			$(".menu").children().click(function() {
-			  let price = addTotal();
-			  $("#total").text("$" + price);
-			})
-		});
-	</script>
 </head>
 <body>
   <div id="wrapper" class="container-fluid">
@@ -430,5 +253,8 @@
 			</div>
 		</footer>
 	</div>
+	<script>
+		$(document).ready(function(){$("#place-order").click(function(){let t=$("#order-table").children(),e=$("#modal-content");e.empty(),0!==t.length?e.append('<h3>Your Order Has Been Placed!</h3><br/><p>Please Consider Filling Out Our <a href="survey.html" class="link" target="_blank">Survey Form</a></p>'):e.append("<h3>Please Select Something Before Ordering</h3>")}),$("#order").click(function(){$("#order-tab").toggle(),$("#menu-content").toggleClass("col-sm-8"),$("#order-tab").toggleClass("col-sm-4");var t=$("#order-button").text();$("#order-button").text("Order"==t?"Remove Order":"Order"),$("#order-table").empty(),$("#total").text("$0.00")}),$("#waffle-pic").click(function(){$("#waffles-menu").toggle()}),$("#pancakes-pic").click(function(){$("#pancakes-menu").toggle()}),$("#french-toast-pic").click(function(){$("#french-toast-menu").toggle()}),$("#sides-pic").click(function(){$("#sides-menu").toggle()}),$("#drinks-pic").click(function(){$("#drinks-menu").toggle()}),$("#reg-waffles").click(function(){$("#order-table").append("<tr><td>Regular Waffles</td><td>$5.99</td></tr")}),$("#blue-waffles").click(function(){$("#order-table").append("<tr><td>Blueberry Waffles</td><td>$6.99</td></tr")}),$("#choc-waffles").click(function(){$("#order-table").append("<tr><td>Chocolate Waffles</td><td>$6.99</td></tr")}),$("#reg-pancakes").click(function(){$("#order-table").append("<tr><td>Regular Pancakes</td><td>$4.99</td></tr")}),$("#blue-pancakes").click(function(){$("#order-table").append("<tr><td>Blueberry Pancakes</td><td>$5.99</td></tr")}),$("#choc-pancakes").click(function(){$("#order-table").append("<tr><td>Chocolate Pancakes</td><td>$5.99</td></tr")}),$("#original-french-toast").click(function(){$("#order-table").append("<tr><td>Original French Toast</td><td>$6.99</td></tr")}),$("#fruit-french-toast").click(function(){$("#order-table").append("<tr><td>Fruit-Topped French Toast</td><td>$6.99</td></tr")}),$("#bacon").click(function(){$("#order-table").append("<tr><td>Hickory-Smoked Bacon</td><td>$1.99</td></tr")}),$("#eggs").click(function(){$("#order-table").append("<tr><td>Eggs</td><td>$1.99</td></tr")}),$("#hash-browns").click(function(){$("#order-table").append("<tr><td>Hash Browns</td><td>$1.99</td></tr")}),$("#fruit").click(function(){$("#order-table").append("<tr><td>Fruit Bowl</td><td>$1.99</td></tr")}),$("#coffee").click(function(){$("#order-table").append("<tr><td>Coffee</td><td>$1.99</td></tr")}),$("#orange-juice").click(function(){$("#order-table").append("<tr><td>Orange Juice</td><td>$1.99</td></tr")}),$("#water").click(function(){$("#order-table").append("<tr><td>Water</td><td>$1.99</td></tr")}),$("#soft-drink").click(function(){$("#order-table").append("<tr><td>Soft Drink</td><td>$1.99</td></tr")}),$(".menu").children().click(function(){let t=addTotal();$("#total").text("$"+t)})});
+	</script>
 </body>
 </html>
