Work on signup.html

--- a/signup.html
+++ b/signup.html
@@ -40,7 +40,37 @@
 			</nav>
 		</header>
 		<main style="margin-bottom: 15vh;">
-	        </main>
+		  <section class="page-section">
+		    <br/>
+			  <div class="title-words">
+			    <h1>Recieve Our Weekly Email!</h1>
+				  <br/>
+			  </div>
+			  <br/><br/>
+			  <form method="post" class="info-div">
+			    <div class="row">
+				  <div class="col-sm-3 col-sm-offset-3">
+				     <strong>Name: </strong><input name="name" type="text" maxlength="20" placeholder="Firstname Lastname" required />
+				  </div>
+				</div>
+				<br/>
+				 <div class="row">
+				  <div class="col-sm-3 col-sm-offset-3">
+				     <strong>Email: </strong><input name="email" type="email" maxlength="20" placeholder="example@example.com" required />
+				  </div>
+				</div>
+				<br/>
+				 <div class="row">
+				  <div class="col-sm-3 col-sm-offset-3">
+				     <p><strong>What Content Would You Like To Hear About?</strong></p>
+					 <input type="radio" name="pref" value="promotions" checked /> Promotions
+					 <input type="radio" name="pref" value="events" checked /> Events
+					 <input type="radio" name="pref" value="promotions" checked /> Promotions
+				  </div>
+				</div>
+			  </div>
+		  </section>
+	    </main>
 	  	<br/>
 	  	<aside>
 			<p style="text-align: center"><em>1(800) 555-1234</em></p>
